--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
@@ -53,6 +53,12 @@
 
 		<s:State name="actions"/>
 	</s:states>
+	
+	<s:Rect width="100%" height="100%">
+		<s:fill>
+			<s:BitmapFill source = "@Embed('assets/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+		</s:fill>
+	</s:Rect>
 
 	<s:RectangularDropShadow id="dropShadow"
 							 bottom="0" color="#000000" left="0" right="0"
@@ -72,25 +78,14 @@
 		<s:Group height="100%" width="100%">
 
 			<s:List id="eventsList"
-					height="100%" labelField="name" width="100%"
+					height="100%" labelField="name" width="100%" contentBackgroundAlpha="0"
 					dragEnabled="true" includeIn="events" itemCreationPolicy="immediate" itemRenderer="net.vdombox.ide.modules.events.view.components.EventItemRenderer"/>
 
 			<s:List id="actionsList"
-					height="100%" labelField="name" width="100%"
+					height="100%" labelField="name" width="100%" contentBackgroundAlpha="0"
 					dragEnabled="true" includeIn="actions" itemCreationPolicy="immediate" itemRenderer="net.vdombox.ide.modules.events.view.components.ActionItemRenderer"/>
 		</s:Group>
 
-		<s:Rect height="15" width="100%"
-				bottomLeftRadiusX="5" bottomRightRadiusX="5">
-
-			<s:fill>
-
-				<s:SolidColor color="0xD4D4D4"/>
-				<!--<s:LinearGradient rotation="90">
-					 <s:GradientEntry color="0xDADADA" />
-					 <s:GradientEntry color="0xC5C5C5" />
-					 </s:LinearGradient>-->
-			</s:fill>
-		</s:Rect>
+		
 	</s:VGroup>
 </s:SparkSkin>
