correct close & switch
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7248 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationPropertiesView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationPropertiesView.mxml
@@ -13,6 +13,10 @@
 			{
 				return resourceManager.getString( 'Core_General', word );
 			}
+//			override public function set visible(value:Boolean):void
+//			{
+//				trace("2 visible:" + value)
+//			}
 		]]>
 	</fx:Script>
 	
