--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsView.mxml
@@ -20,6 +20,10 @@
 				return resourceManager.getString( 'Core_General', word );
 			}
 			
+//			override public function set visible(value:Boolean):void
+//			{
+//				trace("1 visible:" + value);
+//			}
 		]]>
 	</fx:Script>
 	
