--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -4,6 +4,7 @@
 					  xmlns:mx="library://ns.adobe.com/flex/mx"
 					  height="25"
 					  width="100%"
+					  minWidth="225"
 					  contentBackgroundAlpha="0"  >
 
 	<s:states>
@@ -187,9 +188,10 @@
 			 left="20"
 			 width="100%"
 			 top="-2"
+			 minWidth="200"
 			 bottom="-2">
 
-		<s:HGroup width="100%" height="100%" verticalAlign="middle">
+		<s:HGroup  width="100%" height="100%" verticalAlign="middle">
 
 			<s:Rect id="indentationSpacer" width="{treeListData.indent}" percentHeight="100">
 				<s:fill>
@@ -208,9 +210,8 @@
 						 text="{treeListData.label}"
 						 paddingTop="2"
 						 editable="false"
+						 width="100%"
 						 borderVisible="false" selectable="false"/>
-
-			<mx:Spacer width="100%" />
 
 		</s:HGroup>
 
