--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
@@ -49,12 +49,12 @@
 			[Embed( source = "assets/eye_1.png" )]
 			public var visibleEye : Class;
 
-			public function get showElements():Boolean
+			public function get visibleElement():Boolean
 			{
 				return _data.visibleEvent;
 			}
 
-			public function set showElements(value:Boolean):void
+			public function set visibleElement(value:Boolean):void
 			{
 				_data.visibleEvent = value ;
 				if ( _data.visibleEvent )
@@ -63,7 +63,7 @@
 					showElement.source = noVisibleEye;
 			}
 			
-			public function set visibleElements(value:Boolean):void
+			public function set setVisibleElement(value:Boolean):void
 			{
 				visible = value;
 			}
@@ -216,13 +216,12 @@
 			
 			public function showHandler() : void
 			{
-				showElements = !showElements;
+				visibleElement = !visibleElement;
 				dispatchEvent( new ElementEvent ( ElementEvent.SHOW_ELEMENT ) );
 			}
 			
 			protected function skinnablecontainer1_creationCompleteHandler(event:FlexEvent):void
 			{
-				// TODO Auto-generated method stub
 				dispatchEvent( new ElementEvent ( ElementEvent.CREATE_ELEMENT ) );
 			}
 			
@@ -251,9 +250,6 @@
 
 		<s:Label text="{ data.objectName }" textAlign="center" verticalCenter="0" left="5" right="5" width="100%" maxDisplayedLines="1"/>
 	</s:Group>
-
-	<!--<components:ParameterRenderer width="100%"
-								  title="{ title }"/>-->
 
 	<components:ParameterRenderer icon="@Embed('assets/event.png')" width="100%"
 								  title="{ title }"/>
