--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
@@ -47,12 +47,12 @@
 			[Embed( source = "assets/eye_1.png" )]
 			public var visibleEye : Class;
 			
-			public function get showElements():Boolean
+			public function get visibleElement():Boolean
 			{
 				return _data.visibleEvent;
 			}
 			
-			public function set showElements(value:Boolean):void
+			public function set visibleElement(value:Boolean):void
 			{
 				_data.visibleEvent = value;
 				if ( _data.visibleEvent )
@@ -61,7 +61,7 @@
 					showElement.source = noVisibleEye;
 			}
 			
-			public function set visibleElements(value:Boolean):void
+			public function set setVisibleElement(value:Boolean):void
 			{
 				visible = value;
 			}
@@ -103,30 +103,6 @@
 			override protected function updateDisplayList( unscaledWidth : Number, unscaledHeight : Number ) : void
 			{
 				super.updateDisplayList( unscaledWidth, unscaledHeight );
-
-				/*if ( parametersContainer && isNeedUpdateParameters )
-				{
-					isNeedUpdateParameters = false;
-					parametersContainer.removeAllElements();
-
-					if ( _data.parameters.length == 0 )
-						return;
-
-					var parameter : EventParameterVO;
-					var parameterRenderer : ParameterRenderer;
-
-					var parameterRendererFactory : ClassFactory = new ClassFactory( ParameterRenderer );
-					parameterRendererFactory.properties = { percentWidth: 100, icon: parameterIcon };
-
-					for each ( parameter in _data.parameters )
-					{
-						parameterRenderer = parameterRendererFactory.newInstance();
-
-						parameterRenderer.title = parameter.name;
-
-						parametersContainer.addElement( parameterRenderer );
-					}
-				}*/
 			}
 
 			override protected function partAdded( partName : String, instance : Object ) : void
@@ -177,13 +153,12 @@
 			
 			public function showHandler() : void
 			{
-				showElements = !_data.visibleEvent;
+				visibleElement = !_data.visibleEvent;
 				dispatchEvent( new ElementEvent ( ElementEvent.SHOW_ELEMENT ) );
 			}
 			
 			protected function skinnablecontainer1_creationCompleteHandler(event:FlexEvent):void
 			{
-				// TODO Auto-generated method stub
 				dispatchEvent( new ElementEvent ( ElementEvent.CREATE_ELEMENT ) );
 			}
 			
