--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsIconView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsIconView.mxml
@@ -23,9 +23,9 @@
 	
 	<s:Label buttonMode="true" text="{ resourceManager.getString( 'Core_General', 'iconchooser_select_icon' ) }"
 			 fontFamily="Verdana" fontSize="14" textDecoration="underline" color="#FFFFFF"
-			 click="dispatchEvent( new IconChooserEvent (IconChooserEvent.OPEN_ICON_LIST ) );" />
+			 click="{dispatchEvent( new IconChooserEvent (IconChooserEvent.OPEN_ICON_LIST ) );}" />
 	
 	<s:Label buttonMode="true" text="{ resourceManager.getString( 'Core_General', 'iconchooser_load_from_computer' ) }"
 			 fontFamily="Verdana" fontSize="14" textDecoration="underline" color="#FFFFFF"
-			 click="dispatchEvent( new IconChooserEvent( IconChooserEvent.LOAD_ICON ))" />
+			 click="{dispatchEvent( new IconChooserEvent( IconChooserEvent.LOAD_ICON ))}" />
 </s:VGroup>
