--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsView.mxml
@@ -7,7 +7,7 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.core.events.ApplicationManagerWindowEvent;
+			import net.vdombox.ide.core.events.ApplicationManagerEvent;
 			
 			
 			protected function applicationList_creationCompleteHandler(event:FlexEvent):void
