--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
@@ -13,25 +13,25 @@
 	<components:ScriptEditor id="sriptEditor"
 							 height="100%" width="100%"/>
 
-	<s:VGroup height="100%" width="250">
+	<s:VGroup height="100%" width="250" gap="0">
 
 		<components:ContainersPanel id="containersPanel"
-									width="100%"
+									width="100%" height="25%" 
 									skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
 									title="{ resourceManager.getString( 'Scripts_General', 'containers_panel_title' ) }"/>
 
 		<components:ServerScriptsPanel id="serverScriptsPanel"
-									   width="100%"
+									   width="100%" height="25%"
 									   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
 									   title="{ resourceManager.getString( 'Scripts_General', 'server_scripts_panel_title' ) }"/>
 
 		<components:LibrariesPanel id="librariesPanel"
-								   width="100%"
+								   width="100%" height="25%"
 								   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
 								   title="{ resourceManager.getString( 'Scripts_General', 'libraries_panel_title' ) }"/>
 		
 		<components:GlobalScriptsPanel id="globalScriptsPanel"
-								   width="100%"
+								   width="100%" height="25%"
 								   skinClass="net.vdombox.ide.modules.scripts.view.skins.PanelSkin"
 								   title="{ resourceManager.getString( 'Scripts_General', 'libraries_panel_title' ) }"/>
 		
