--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ScriptEditor.mxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:components="net.vdombox.ide.modules.scripts.view.components.*"
+<s:NavigatorContent xmlns:components="net.vdombox.ide.modules.scripts.view.components.*"
 		 xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 height="100%" width="100%" xmlns:editors="net.vdombox.editors.*"
-		 creationComplete="creationCompleteHandler()">
+		 xmlns:components1="net.vdombox.components.*">
 
 	<fx:Script>
 		<![CDATA[
@@ -33,19 +33,22 @@
 			{
 				pythonScriptEditor.syntax = _syntax;
 			}*/
-
-			protected function creationCompleteHandler() : void
-			{
-				pythonScriptEditor.addEventListener( EditAreaEvent.SAVE, scriptEditor_saveHandler, false, 0, true );
-			}
 			
-			private function scriptEditor_saveHandler( event : EditAreaEvent ) : void
+			private function scriptEditor_saveHandler( event : MouseEvent ) : void
 			{
 				dispatchEvent( new ScriptEditorEvent( ScriptEditorEvent.SAVE ) );
 			}
 		]]>
 	</fx:Script>
+	<s:VGroup width="100%" height="100%" gap="0">
+		<editors:PythonScriptEditor id="pythonScriptEditor"
+									height="100%" width="100%"  scriptAreaComponent="{new ScriptAreaComponent()}"/>
+		
+		<s:HGroup width="100%" height="40" horizontalAlign="right" 
+				  paddingTop="5" paddingBottom="5" paddingRight="10">
+			<components1:VdomButton id="save" label="Save" click="scriptEditor_saveHandler( event )"/>
+		</s:HGroup>
+	</s:VGroup>
 
-	<editors:PythonScriptEditor id="pythonScriptEditor"
-						 height="100%" width="100%"  scriptAreaComponent="{new ScriptAreaComponent()}"/>
-</s:Group>
+	
+</s:NavigatorContent>
