Fix bug fitw long name of Actions and 2-th action with one name
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7264 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ParameterRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ParameterRenderer.mxml
@@ -32,7 +32,7 @@
 
 		<mx:Image source="{ icon }" width="16" height="16"/>
 
-		<s:Label text="{ title }" />
+		<s:TextInput text="{ title }" width="100%" editable="false" contentBackgroundAlpha="0" borderVisible="false" />
 	</s:HGroup>
 	
 	<s:Line xFrom="24" xTo="24" yFrom="0" yTo="20">
