add copy id resource
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7266 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/InfoArea.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/InfoArea.mxml
@@ -132,8 +132,8 @@
 					 fontFamily="Verdana" fontWeight="normal" verticalAlign="middle"/>
 			<s:Label height="20" text="{ _resourceVO.type.toUpperCase() }" width="100%"
 					 fontFamily="Verdana" fontWeight="normal" verticalAlign="middle"/>
-			<s:Label height="20" text="{ _resourceVO.id }" width="100%"
-					 fontFamily="Verdana" fontWeight="normal" verticalAlign="middle"/>
+			<s:TextInput height="20" text="{ _resourceVO.id }" width="280" editable="false" contentBackgroundAlpha="0" borderVisible="false"
+					 fontFamily="Verdana" fontWeight="normal"/>
 			<s:Label id="size"
 					 height="20" width="100%"
 					 fontFamily="Verdana" fontWeight="normal" verticalAlign="middle"/>
