Changed icons< add Application icon
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7270 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationPropertiesView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationPropertiesView.mxml
@@ -47,8 +47,8 @@
 		
 		<s:HGroup width="100%" paddingBottom="10">
 			
-			<s:RadioButton id="vbscript"
-						   label="vscript" value="vbscript" color="#FFFFFF"
+			<s:RadioButton id="vscript"
+						   label="vscript" value="vscript" color="#FFFFFF"
 						   groupName="languageRBGroup" skinClass="spark.skins.spark.RadioButtonSkin" />
 			
 			<s:RadioButton id="python"
