--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationsIconsChoosWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationsIconsChoosWindowSkin.mxml
@@ -26,7 +26,7 @@
 			{
 				hostComponent.selectIcon();
 			}
-			
+//			resourceManager.getString( 'Core_General', 'iconchooser_select_icon' )
 		]]>
 	</fx:Script>
 	
@@ -53,7 +53,7 @@
 	<s:VGroup left="9" top="9" right="9" bottom="9" gap="10">
 		
 		<s:Group width="100%" height="42">
-			<s:TitleBar id="titleBar"
+			<s:TitleBar id="titleBar" 
 						width="100%" height="100%"
 						skinClass="net.vdombox.view.skins.PopupWindowTitleBarSkin"/>
 			
