--- a/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMVScrollBarSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/view/skins/VDOMScrollBarSkin/VDOMVScrollBarSkin.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" minWidth="7" minHeight="35" 
+    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" minWidth="7" minHeight="35" height="100%"
     alpha.disabled="0.5" alpha.inactive="0.5" >
 
     <fx:Metadata>
