--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:SkinnableContainer xmlns:components="net.vdombox.ide.modules.events.view.components.*"
+<components:BaseElement xmlns:components="net.vdombox.ide.modules.events.view.components.*"
 					  xmlns:fx="http://ns.adobe.com/mxml/2009"
 					  xmlns:mx="library://ns.adobe.com/flex/halo"
 					  xmlns:s="library://ns.adobe.com/flex/spark"
@@ -16,6 +16,7 @@
 			import net.vdombox.ide.common.vo.EventVO;
 			import net.vdombox.ide.modules.events.events.ElementEvent;
 			import net.vdombox.ide.modules.events.view.skins.EventElementSkin;
+			import net.vdombox.view.EyeImage;
 			
 			import spark.components.Group;
 			import spark.components.Label;
@@ -27,65 +28,13 @@
 			[SkinPart( required="true" )]
 			public var headerGroup : Group;
 			
-			[SkinPart( required="true" )]
-			public var showElement : Image;
-
-			[Bindable]
-			public var title : String;
-
-			private var _data : EventVO;
-			
-
-			private var isNeedUpdateParameters : Boolean;
-
 			private var mouseOffcetX : int;
 			private var mouseOffcetY : int;
 			
-			[Embed( source = "assets/eye_0w.png" )]
-			public var noVisibleEye : Class;
-			
-			[Embed( source = "assets/eye_1.png" )]
-			public var visibleEye : Class;
-			
-			public function get visibleElement():Boolean
-			{
-				return _data.visibleEvent;
-			}
-			
-			public function set visibleElement(value:Boolean):void
-			{
-				_data.visibleEvent = value;
-				if ( _data.visibleEvent )
-					showElement.source = visibleEye;
-				else
-					showElement.source = noVisibleEye;
-			}
-			
-			public function set setVisibleElement(value:Boolean):void
-			{
-				visible = value;
-			}
-			
-			public function get idElement() : String
-			{
-				if ( _data )
-					return _data.name + _data.objectID;
-				else
-					return "";
-			}
-			
-			public function get objectID() : String
-			{
-				if ( _data )
-					return _data.objectID;
-				else
-					return "";
-			}
-
 			[Bindable]
 			public function get data() : EventVO
 			{
-				return _data;
+				return _data as EventVO;
 			}
 
 			public function set data( value : EventVO ) : void
@@ -113,62 +62,13 @@
 					headerGroup.addEventListener( MouseEvent.MOUSE_DOWN, header_mouseDownHandler );
 			}
 
-			private function header_mouseDownHandler( event : MouseEvent ) : void
-			{
-				stage.addEventListener( MouseEvent.MOUSE_UP, stage_mouseUpHandler );
-				stage.addEventListener( MouseEvent.MOUSE_MOVE, stage_mouseMoveHandler );
-				stage.addEventListener( MouseEvent.MOUSE_MOVE, stage_mouseMoveHandlerExt );
-
-				mouseOffcetX = mouseX;
-				mouseOffcetY = mouseY;
-			}
-
-			private function stage_mouseMoveHandler( event : MouseEvent ) : void
-			{
-				var newX : int = parent.mouseX - mouseOffcetX;
-				var newY : int = parent.mouseY - mouseOffcetY;
-
-				if ( newX < 0 )
-					x = 0;
-				else
-					x = newX;
-
-				if ( newY < 0 )
-					y = 0;
-				else
-					y = newY;
-			}
-
-			private function stage_mouseMoveHandlerExt( event : MouseEvent ) : void
-			{
-				dispatchEvent( new ElementEvent( ElementEvent.MOVED ) );
-				stage.removeEventListener( MouseEvent.MOUSE_MOVE, stage_mouseMoveHandlerExt );
-			}
-			
-			private function stage_mouseUpHandler( event : MouseEvent ) : void
-			{
-				stage.removeEventListener( MouseEvent.MOUSE_MOVE, stage_mouseMoveHandler );
-				stage.removeEventListener( MouseEvent.MOUSE_UP, stage_mouseUpHandler );
-			}
-			
-			public function showHandler() : void
-			{
-				visibleElement = !_data.visibleEvent;
-				dispatchEvent( new ElementEvent ( ElementEvent.SHOW_ELEMENT ) );
-			}
-			
-			protected function skinnablecontainer1_creationCompleteHandler(event:FlexEvent):void
-			{
-				dispatchEvent( new ElementEvent ( ElementEvent.CREATE_ELEMENT ) );
-			}
-			
 		]]>
 	</fx:Script>
 
-	<s:layout>
+	<components:layout>
 
 		<s:VerticalLayout gap="1"/>
-	</s:layout>
+	</components:layout>
 
 	<s:Group height="20" width="100%">
 		
@@ -194,4 +94,4 @@
 	<s:VGroup id="parametersContainer"
 			  width="100%"
 			  gap="1"/>
-</s:SkinnableContainer>
+</components:BaseElement>
